# ensayo

./: .gitignore  README.md  WORKREADY-PLAN.md  pyproject.toml
examples/pinnacle-events/: brief.yaml  site.yaml
examples/pinnacle-events/content/docs/policy/: cancellation-policy.md  sustainability-policy.md
examples/pinnacle-events/content/employees/: david-park.md  emma-wilson.md  james-chen.md  maria-santos.md  nina-patel.md  rachel-martinez.md  sophie-anderson.md
src/ensayo/: __init__.py  ai.py  booking.py  builder.py  cli.py  content.py  frontmatter.py  generator.py  models.py  prompts.py  scaffold.py  templates_data.py
src/ensayo/archetypes/: client_relations.yaml  finance_manager.yaml  founder_ceo.yaml  hr_manager.yaml  marketing_manager.yaml  operations_manager.yaml  technical_specialist.yaml
src/ensayo/industries/: cloud_services.yaml  event_management.yaml  managed_it.yaml
src/ensayo/templates/: about.html.j2  base.html.j2  careers.html.j2  chatbot.html.j2  contact.html.j2  doc-listing.html.j2  doc.html.j2  index.html.j2  job.html.j2  services.html.j2  team.html.j2
src/ensayo/templates/components/: booking-gate.html.j2  chatbot-widget.html.j2  footer.html.j2  nav.html.j2
src/ensayo/templates/prompts/: backstory_system.txt.j2  backstory_user.txt.j2  chatbot_prompt.txt.j2  document_system.txt.j2  document_user.txt.j2  job_system.txt.j2  job_user.txt.j2  scaffold_auto.txt.j2  scaffold_minimal.txt.j2
src/ensayo/themes/: base.css  civic-green.css  corporate-blue.css  finance-slate.css  industrial-red.css  tech-dark.css  warm-hospitality.css
tests/: test_booking.py  test_builder.py  test_cli.py  test_content.py  test_frontmatter.py  test_generator.py  test_init.py  test_models.py  test_prompts.py  test_scaffold.py
tests/fixtures/: brief.yaml  site.yaml
tests/fixtures/content/employees/: jane-doe.md
tests/fixtures/content/pages/: about.md
(+12 files in other folders)
